Fix/moduleContainer z-index

--- a/src/components/Purse/PurseDesktop/components/Balance/styles.module.scss
+++ b/src/components/Purse/PurseDesktop/components/Balance/styles.module.scss
@@ -199,6 +199,7 @@
   left: 0;
   bottom: 0;
   background: rgba(43, 40, 41, 0.5);
+  z-index: 1000;
 
   &_invisible {
     display: none;
